# hapdev-application

./: .gitignore  Cargo.toml  README.md  cargo-generate.toml
.cargo/: config.toml
frontend/: .gitignore  .npmrc  Cargo.toml  index.html  package.json  rsbuild.config.ts  rsw.toml  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/frontend-wasm/: Cargo.toml
frontend/frontend-wasm/src/: index.rs  lib.rs  route.rs
frontend/frontend-wasm/src/pages/: home.rs  mod.rs
frontend/public/assets/css/: transfer.css
frontend/public/scss/: _custom.scss  examples.scss  style.scss  transfer.scss
frontend/public/scss/card/: card.scss
frontend/public/scss/editor/: editor.scss  part.scss
frontend/public/scss/tinymce/: tinymce.scss
frontend/public/scss/treeview/: nav_treeview.scss  treeview.scss
frontend/public/tinymce/plugins/resource_manager/: plugin.js
frontend/src/: App.vue  env.d.ts  main.ts  router.ts
frontend/src/views/: Application.vue  ResourceManager.vue
server/: Cargo.toml
server/config/: application.yml  log4rs.yml
server/src/: application.rs  main.rs  result.rs
xtask/: Cargo.toml
xtask/src/: generate_code.rs  main.rs
