[package]
name = "box-culture"
version = "0.1.0"

authors = ["shangyl"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "^4.3", features = ["derive"] }
log = "^0.4"

actix = { version = "^0.13" }
actix-cors = { version = "^0.7" }
actix-web = { version = "^4.0" }
actix-web-actors = { version = "^4.1" }

chrono = { version = "^0.4", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
serde_with_macros = { version = "^3.0" }
strum = { version = "^0.26", features = ["derive"] }

sqlx = { version = "^0.7", features = [
    "all-databases",
    "runtime-tokio-native-tls",
] }
tokio = { version = "^1.21", features = ["full"] }

futures = { version = "^0.3", features = ["std", "thread-pool"] }

hapdev-app = { version = "^0.2", registry = "crate-isolovr" }
sql-orm = { version = "^0.2", registry = "crate-isolovr" }
web-framework = { version = "^0.2.9", registry = "crate-isolovr" }


crate-config = { version = "^0.2", registry = "crate-isolovr" }
crate-kms = { version = "^0.2", registry = "crate-isolovr" }
crate-resource = { version = "^0.2", registry = "crate-isolovr" }
crate-user = { version = "^0.2", registry = "crate-isolovr", features = [
    "weixin",
] }
crate-weixin = { version = "^0.2", registry = "crate-isolovr" }

[dev-dependencies]
simple_logger = "^5.0"
num-traits = { version = "^0.2", default-features = false }
format_no_std = { version = "^1.2" }
