[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = ["crate-isolovr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "^0.4" }
simple_logger = "*"

xshell = "^0.2"
anyhow = "^1.0"

syn = { version = "^2.0", features = ["visit", "extra-traits"] }
fusion-codegen = { version = "^0.1", registry = "crate-isolovr" }

tokio = { version = "^1.21", features = ["full"] }
lazy_static = "^1.4"

man = "0.3.0"
